2007-03-10  Vincent Untz  <vuntz@gnome.org>

	* docbook/Makefile_shared.am_fragment: remove fr reference I put to do
	some tests

2007-03-10  Vincent Untz  <vuntz@gnome.org>

	* docbook/*: import release notes
