@@ -1,5 +1,10 @@
 2007-03-10  Vincent Untz  <vuntz@gnome.org>
 
+	* Makefile.am: comment some lines that make the build fail since
+	there's no figures yet. Will put the lines back later.
+
+2007-03-10  Vincent Untz  <vuntz@gnome.org>
+
 	* docbook/Makefile_shared.am_fragment: remove fr reference I put to do
 	some tests
 
